# research

./: .gitignore  README.md  collate_results_sync_thrpt_async.py  refactoring.py  setup.py
ai_skills/evaluation/eval-agent/: README.md  SKILL.md  pyproject.toml  requirements.txt
ai_skills/evaluation/eval-agent/eval_agent/: audit.py  cli.py  lighteval_runner.py  lm_eval_runner.py  runner.py  server.py  summary.py
ai_skills/evaluation/eval-agent/eval_agent/benchmarks/: registry.yaml
automation/: README.md  audit_jan2025.md
calibration_dataset/: calibration_dataset.py
clearml/: lm_evaluation_harness.py  utils.py
clearml_evaluation_parsing/: README.md  lm_evaluation_harness.py
docs/: adding_tasks.md  callable_as_argument.md  creating_pipelines.md  running_guidellm.md  running_hyperparameter_optimization.md  running_llmcompressor.md  running_lmeval.md
examples/: aime2024_example.py  aime2024_litellm_example.py  api_config.yaml  arenahard_example.py  arenahard_pipeline.py  benchmarking_chat_example.py  debug_example.py  generate_arenahard_example.py  guidellm_example.py  hpo_example.py  jira_1827_lighteval.py  jira_arenahard.py  jira_arenahard_generation.py  jira_arenahard_judging.py  jira_lighteval_full.py  jira_lighteval_subset.py  jira_lmeval_example.py  judge_arenahard_example.py  leaderboard_example.py  lighteval_example.py  llm_compress_eval_example.py  llmcompressor_example.py  lmeval_example.py  multimodal_hpo_example.py  openllm_example.py  (+10 more)
examples/q_fin_arxiv_context_length/: README.md  benchmark.py  methodology.md  pyproject.toml  report.py
(+277 files in other folders)
